--- a/notebook/taller_formularios/GET/busqueda_get.html
+++ b/notebook/taller_formularios/GET/busqueda_get.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formularios GET | POST</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="C:\Users\carva\Desktop\2ºAnio\entornoServidor\notebook\taller_formularios\style.css">
 </head>
 
 <body>
