--- a/notebook/taller_formularios/GET/busqueda_get.html
+++ b/notebook/taller_formularios/GET/busqueda_get.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formularios GET | POST</title>
-    <link rel="stylesheet" href="C:\Users\carva\Desktop\2ºAnio\entornoServidor\notebook\taller_formularios\style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <h1>Formulario de Búsqueda (método GET)</h1>
     <form action="procesar_busqueda.php" method="get">
-        <label for="query">Buscar:</label>
+        <label for="query">Buscar</label>
         <input type="text" id="query" name="termino_busqueda" required>
         <button type="submit">Buscar</button>
     </form>
